--- a/projetoRevendaVeiculosSpringMVC/WebContent/WEB-INF/web.xml
+++ b/projetoRevendaVeiculosSpringMVC/WebContent/WEB-INF/web.xml
@@ -10,6 +10,17 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
+  <filter>
+  	<filter-name>sitemesh</filter-name>
+  	<filter-class>
+  	  com.opensymphony.sitemesh.webapp.SiteMeshFilter
+  	</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>sitemesh</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <servlet>
   	<servlet-name>dispatcherServlet</servlet-name>
   	<servlet-class>
