--- a/projetoRevendaVeiculosSpringMVC/WebContent/WEB-INF/web.xml
+++ b/projetoRevendaVeiculosSpringMVC/WebContent/WEB-INF/web.xml
@@ -10,6 +10,7 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
+  <!-- Sitemesh -->
   <filter>
   	<filter-name>sitemesh</filter-name>
   	<filter-class>
@@ -21,14 +22,30 @@
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
   
+  <!-- Spring Core e Security -->
+  <context-param>
+  	<param-name>contextConfigLocation</param-name>
+  	<param-value>
+  	  classpath:applicationContext.xml
+  	  /WEB-INF/spring-security.xml
+  	</param-value>
+  </context-param>
+  
+  <listener>
+	<listener-class>
+      org.springframework.web.context.ContextLoaderListener
+	</listener-class>
+  </listener>
+  
+  <!-- Spring MVC -->
   <servlet>
   	<servlet-name>dispatcherServlet</servlet-name>
   	<servlet-class>
-  		org.springframework.web.servlet.DispatcherServlet
+  	  org.springframework.web.servlet.DispatcherServlet
   	</servlet-class>
   	<init-param>
-  		<param-name>contextConfigLocation</param-name>
-  		<param-value>classpath:applicationContext.xml</param-value>
+  	  <param-name>contextConfigLocation</param-name>
+  	  <param-value>/WEB-INF/spring-mvc.xml</param-value>
   	</init-param>
   	<load-on-startup>1</load-on-startup>
   </servlet>
@@ -36,4 +53,16 @@
   	<servlet-name>dispatcherServlet</servlet-name>
   	<url-pattern>/</url-pattern>
   </servlet-mapping>
+  
+  <!-- Spring Security -->
+  <filter>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<filter-class>
+	  org.springframework.web.filter.DelegatingFilterProxy
+	</filter-class>
+  </filter>
+  <filter-mapping>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
