--- a/projetoRevendaVeiculosSpringMVC/WebContent/WEB-INF/web.xml
+++ b/projetoRevendaVeiculosSpringMVC/WebContent/WEB-INF/web.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+		 xmlns="http://java.sun.com/xml/ns/javaee" 
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+		 id="WebApp_ID" version="3.0">
   <display-name>RevendaVeiculosSpringMVC</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -10,59 +13,60 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-  <!-- Sitemesh -->
-  <filter>
-  	<filter-name>sitemesh</filter-name>
-  	<filter-class>
-  	  com.opensymphony.sitemesh.webapp.SiteMeshFilter
-  	</filter-class>
-  </filter>
-  <filter-mapping>
-  	<filter-name>sitemesh</filter-name>
-  	<url-pattern>/*</url-pattern>
-  </filter-mapping>
-  
   <!-- Spring Core e Security -->
   <context-param>
-  	<param-name>contextConfigLocation</param-name>
-  	<param-value>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>
   	  classpath:applicationContext.xml
   	  /WEB-INF/spring-security.xml
   	</param-value>
   </context-param>
   
+  <!-- Spring Security -->
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>
+	  org.springframework.web.filter.DelegatingFilterProxy
+	</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <!-- Sitemesh -->
+  <filter>
+    <filter-name>sitemesh</filter-name>
+    <filter-class>
+  	  com.opensymphony.sitemesh.webapp.SiteMeshFilter
+  	</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>sitemesh</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <!-- Spring Core e Security -->
   <listener>
-	<listener-class>
+    <listener-class>
       org.springframework.web.context.ContextLoaderListener
 	</listener-class>
   </listener>
   
   <!-- Spring MVC -->
   <servlet>
-  	<servlet-name>dispatcherServlet</servlet-name>
-  	<servlet-class>
+    <servlet-name>dispatcherServlet</servlet-name>
+    <servlet-class>
   	  org.springframework.web.servlet.DispatcherServlet
   	</servlet-class>
-  	<init-param>
-  	  <param-name>contextConfigLocation</param-name>
-  	  <param-value>/WEB-INF/spring-mvc.xml</param-value>
-  	</init-param>
-  	<load-on-startup>1</load-on-startup>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>/WEB-INF/spring-mvc.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>dispatcherServlet</servlet-name>
-  	<url-pattern>/</url-pattern>
+    <servlet-name>dispatcherServlet</servlet-name>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
-  
-  <!-- Spring Security -->
-  <filter>
-	<filter-name>springSecurityFilterChain</filter-name>
-	<filter-class>
-	  org.springframework.web.filter.DelegatingFilterProxy
-	</filter-class>
-  </filter>
-  <filter-mapping>
-	<filter-name>springSecurityFilterChain</filter-name>
-	<url-pattern>/*</url-pattern>
-  </filter-mapping>
 </web-app>
