--- a/projetoRevendaVeiculosSpringMVC/WebContent/WEB-INF/web.xml
+++ b/projetoRevendaVeiculosSpringMVC/WebContent/WEB-INF/web.xml
@@ -4,14 +4,6 @@
 		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
 		 id="WebApp_ID" version="3.0">
   <display-name>RevendaVeiculosSpringMVC</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
   
   <!-- Spring Core e Security -->
   <context-param>
@@ -19,6 +11,7 @@
     <param-value>
   	  classpath:applicationContext.xml
   	  /WEB-INF/spring-security.xml
+  	  /WEB-INF/spring-webflow.xml
   	</param-value>
   </context-param>
   
